--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -1181,7 +1181,7 @@ we can compute the perturbation series of $S_\eff(x)$ explicitly: it is of the f
 \end{equation}
 with
 \begin{equation} \label{eq:seff-terms}
-  m_\eff = m + \frac{\mu}{2M}, \qquad \lambda_k = \begin{cases} 0 & \text{ for $k$ odd,} \\ - \left( - \frac{\mu}{M} \right)^{k/2} \frac{1}{2^{k/2+2} k} & \text{ for $k$ even.} \end{cases} 
+  m_\eff = m + \frac{\mu}{2M}, \qquad \lambda_k = \begin{cases} 0 & \text{ for $k$ odd,} \\ - \left( - \frac{\mu}{M} \right)^{k/2} \frac{(k-1)!}{2^{k/2}} & \text{ for $k$ even.} \end{cases} 
 \end{equation}
 
 Some qualitative remarks about $S_\eff(x)$:
