--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -331,6 +331,9 @@ or as pull requests to the source repository hosted at
 \begin{center}
 \small \url{http://github.com/neitzke/qft-geometry}
 \end{center}
+I thank Arun Debray, Robbie Rosati and Ivan Tulli for very helpful
+suggestions and corrections.
+
 You can join a Slack channel for the course (needs {\tt {@math.utexas.edu}} address)
 at
 \begin{center}
